src/objects/MA_Model__c.object
<CustomObject>
    <fields>
        <fullName>Equipment_Group__c</fullName>
        <label>Equipment Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Type_Labor__c</fullName>
        <label>Equipment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absorption Chiller</fullName>
                </value>
                <value>
                    <fullName>Air Cooled Screw Chiller</fullName>
                </value>
                <value>
                    <fullName>Air Cooled Scroll Chiller</fullName>
                </value>
                <value>
                    <fullName>Air Handler</fullName>
                </value>
                <value>
                    <fullName>Balancing Valves</fullName>
                </value>
                <value>
                    <fullName>Boiler -  Condensing</fullName>
                </value>
                <value>
                    <fullName>Boiler - Steam</fullName>
                </value>
                <value>
                    <fullName>Boiler - Water</fullName>
                </value>
                <value>
                    <fullName>Breaching or venting System</fullName>
                </value>
                <value>
                    <fullName>Condensing Unit</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>Cooling Tower</fullName>
                </value>
                <value>
                    <fullName>Duct System</fullName>
                </value>
                <value>
                    <fullName>Energy Recovery Wheels</fullName>
                </value>
                <value>
                    <fullName>Evaporative Cooler</fullName>
                </value>
                <value>
                    <fullName>Fan</fullName>
                </value>
                <value>
                    <fullName>Fan Coil</fullName>
                </value>
                <value>
                    <fullName>Fan Coil Unit</fullName>
                </value>
                <value>
                    <fullName>Fluid Cooler</fullName>
                </value>
                <value>
                    <fullName>Heat Exchanger - Air</fullName>
                </value>
                <value>
                    <fullName>Heat Exchange - Plate &amp; Frame</fullName>
                </value>
                <value>
                    <fullName>Heat Exchange -Shell &amp; Tube</fullName>
                </value>
                <value>
                    <fullName>Isolation Valve</fullName>
                </value>
                <value>
                    <fullName>Piping System</fullName>
                </value>
                <value>
                    <fullName>Pneumatic Controls</fullName>
                </value>
                <value>
                    <fullName>Pump</fullName>
                </value>
                <value>
                    <fullName>Pump Strainer</fullName>
                </value>
                <value>
                    <fullName>Refrigerant Air Dryer</fullName>
                </value>
                <value>
                    <fullName>Refrigerant Monitor</fullName>
                </value>
                <value>
                    <fullName>Rooftop Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Type__c</fullName>
        <label>Equipment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Absorption Chillers</fullName>
                </value>
                <value>
                    <fullName>AC Screw</fullName>
                </value>
                <value>
                    <fullName>Air Cleaners</fullName>
                </value>
                <value>
                    <fullName>Air Handlers &amp; Make-up Air Units</fullName>
                </value>
                <value>
                    <fullName>Airside Heat Recovery - Fixed Plate</fullName>
                </value>
                <value>
                    <fullName>Airside Heat Recovery Ventilator-Wheel</fullName>
                </value>
                <value>
                    <fullName>Back Flow Prevention</fullName>
                </value>
                <value>
                    <fullName>Blow Down Heat Recovery</fullName>
                </value>
                <value>
                    <fullName>Boilers - Electric Type</fullName>
                </value>
                <value>
                    <fullName>Boilers- Fossil Fuel Types</fullName>
                </value>
                <value>
                    <fullName>Centrifugal Chillers - Negative (low) Pressure</fullName>
                </value>
                <value>
                    <fullName>Centrifugal Chillers - Positive (high) Pressure</fullName>
                </value>
                <value>
                    <fullName>Computer Room Air Conditioning Units - (CRAC)</fullName>
                </value>
                <value>
                    <fullName>Cooling Towers</fullName>
                </value>
                <value>
                    <fullName>De-Humidifiers - Desiccant or Refrigerant Type</fullName>
                </value>
                <value>
                    <fullName>Domestic Water Heaters</fullName>
                </value>
                <value>
                    <fullName>Dry Coolers - Air cooled fluid cooler</fullName>
                </value>
                <value>
                    <fullName>Exhaust &amp; Return Fans</fullName>
                </value>
                <value>
                    <fullName>Fan Coil Units or Unit Ventilator</fullName>
                </value>
                <value>
                    <fullName>Flue Gas Heat Recovery (Stack economizer)</fullName>
                </value>
                <value>
                    <fullName>Furnaces</fullName>
                </value>
                <value>
                    <fullName>Heat Exchangers - Plate &amp; Frame / Shell &amp; Tube</fullName>
                </value>
                <value>
                    <fullName>Humidifier Units - Electric &amp; Steam</fullName>
                </value>
                <value>
                    <fullName>Magnetic Bearing Centrifugal Chillers</fullName>
                </value>
                <value>
                    <fullName>Pneumatic Air Compressor System</fullName>
                </value>
                <value>
                    <fullName>PTAC - Packaged Through the wall Air Conditioners</fullName>
                </value>
                <value>
                    <fullName>Reciprocating / Scroll Chillers - Air and Water Cooled</fullName>
                </value>
                <value>
                    <fullName>Refrigerant Monitor</fullName>
                </value>
                <value>
                    <fullName>Refrigerated Air Driers</fullName>
                </value>
                <value>
                    <fullName>Roof Top / Packaged or Split Systems (Unitary Equipment, Heating and cooling)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daikin</fullName>
                </value>
                <value>
                    <fullName>McQuay</fullName>
                </value>
                <value>
                    <fullName>Aaon</fullName>
                </value>
                <value>
                    <fullName>Amana</fullName>
                </value>
                <value>
                    <fullName>Armstrong</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Chigo</fullName>
                </value>
                <value>
                    <fullName>Chil-Pak</fullName>
                </value>
                <value>
                    <fullName>Climate Master</fullName>
                </value>
                <value>
                    <fullName>Climaveneta</fullName>
                </value>
                <value>
                    <fullName>Dunham Bush</fullName>
                </value>
                <value>
                    <fullName>EAS</fullName>
                </value>
                <value>
                    <fullName>Envirosep</fullName>
                </value>
                <value>
                    <fullName>Epsilon</fullName>
                </value>
                <value>
                    <fullName>FHP</fullName>
                </value>
                <value>
                    <fullName>GE</fullName>
                </value>
                <value>
                    <fullName>Goodman</fullName>
                </value>
                <value>
                    <fullName>Gree</fullName>
                </value>
                <value>
                    <fullName>Lennox</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>Mammoth</fullName>
                </value>
                <value>
                    <fullName>Maytag</fullName>
                </value>
                <value>
                    <fullName>Midea</fullName>
                </value>
                <value>
                    <fullName>Mitsubishi</fullName>
                </value>
                <value>
                    <fullName>Multi Aqua</fullName>
                </value>
                <value>
                    <fullName>Nordyne</fullName>
                </value>
                <value>
                    <fullName>Panasonic</fullName>
                </value>
                <value>
                    <fullName>Petra</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Smardt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Serialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Serialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Manufacturer__c</fullName>
        <label>Other Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>MA Models</relationshipLabel>
        <relationshipName>MA_Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <label>Serial #</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Location__c</fullName>
        <label>Site Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site 1</fullName>
                </value>
                <value>
                    <fullName>Site 2</fullName>
                </value>
                <value>
                    <fullName>Site 3</fullName>
                </value>
                <value>
                    <fullName>Site 4</fullName>
                </value>
                <value>
                    <fullName>Site 5</fullName>
                </value>
                <value>
                    <fullName>Site 6</fullName>
                </value>
                <value>
                    <fullName>Site 7</fullName>
                </value>
                <value>
                    <fullName>Site 8</fullName>
                </value>
                <value>
                    <fullName>Site 9</fullName>
                </value>
                <value>
                    <fullName>Site 10</fullName>
                </value>
                <value>
                    <fullName>Site 11</fullName>
                </value>
                <value>
                    <fullName>Site 12</fullName>
                </value>
                <value>
                    <fullName>Site 13</fullName>
                </value>
                <value>
                    <fullName>Site 14</fullName>
                </value>
                <value>
                    <fullName>Site 15</fullName>
                </value>
                <value>
                    <fullName>Site 16</fullName>
                </value>
                <value>
                    <fullName>Site 17</fullName>
                </value>
                <value>
                    <fullName>Site 18</fullName>
                </value>
                <value>
                    <fullName>Site 19</fullName>
                </value>
                <value>
                    <fullName>Site 20</fullName>
                </value>
                <value>
                    <fullName>Site 21</fullName>
                </value>
                <value>
                    <fullName>Site 22</fullName>
                </value>
                <value>
                    <fullName>Site 23</fullName>
                </value>
                <value>
                    <fullName>Site 24</fullName>
                </value>
                <value>
                    <fullName>Site 25</fullName>
                </value>
                <value>
                    <fullName>Site 26</fullName>
                </value>
                <value>
                    <fullName>Site 27</fullName>
                </value>
                <value>
                    <fullName>Site 28</fullName>
                </value>
                <value>
                    <fullName>Site 29</fullName>
                </value>
                <value>
                    <fullName>Site 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueNumber__c</fullName>
        <label>UniqueNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MA Model</label>
    <nameField>
        <displayFormat>MAM-{000000000}</displayFormat>
        <label>MA Model Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>